# PaperCutLight

./: .gitignore  CMakeLists.txt  LICENSE-FONT  README.md
asset/: accumulate.hlsl  diffuse.hlsl  jensen.hlsl  random.hlsl  tonemap.hlsl  tracing.hlsl
doc/manual-cn/: manual-cn.md
doc/manual-en/: manual.md
include/pcl/: common.h  langText.h  layerMonitor.h  pcl.h  scene.h
include/pcl/renderer/: accumulator.h  jensenRhoDt.h  toneMapper.h  tracer.h
lib/fw/: CMakeLists.txt
lib/fw/include/FileWatcher/: FileWatcher.h
src/: layerMonitor.cpp  main.cpp  pcl.cpp
src/renderer/: accumulator.cpp  jensenRhoDt.cpp  toneMapper.cpp  tracer.cpp
