CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

PROJECT(PAPER-CUT-LIGHT)

SET_PROPERTY(GLOBAL PROPERTY USE_FOLDERS ON)

SET(AGZ_ENABLE_D3D11 ON)
ADD_SUBDIRECTORY(lib/agz-utils)
TARGET_COMPILE_DEFINITIONS(AGZUtils PUBLIC AGZ_UTILS_SSE _UNICODE)
SET_TARGET_PROPERTIES(AGZUtils PROPERTIES FOLDER "ThirdParty")

ADD_SUBDIRECTORY(lib/fw)
TARGET_COMPILE_DEFINITIONS(FileWatcher PUBLIC _UNICODE)
SET_TARGET_PROPERTIES(FileWatcher PROPERTIES FOLDER "ThirdParty")

FILE(GLOB_RECURSE SRC
		"${PROJECT_SOURCE_DIR}/src/*.cpp"
		"${PROJECT_SOURCE_DIR}/src/*.h"
		"${PROJECT_SOURCE_DIR}/include/*.cpp"
		"${PROJECT_SOURCE_DIR}/include/*.h")

ADD_EXECUTABLE(PaperCutLight ${SRC})

FOREACH(_SRC IN ITEMS ${SRC})
    GET_FILENAME_COMPONENT(SRC "${_SRC}" PATH)
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/pcl" "include" _GRP_PATH "${SRC}")
    STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "src" _GRP_PATH "${_GRP_PATH}")
    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
ENDFOREACH()

SET_PROPERTY(TARGET PaperCutLight PROPERTY CXX_STANDARD 17)
SET_PROPERTY(TARGET PaperCutLight PROPERTY CXX_STANDARD_REQUIRED ON)

IF(MSVC)
    SET_PROPERTY(
        TARGET PaperCutLight
        PROPERTY VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}")
ENDIF()

IF(PCL_CN)
    TARGET_COMPILE_DEFINITIONS(PaperCutLight PUBLIC PCL_CN)
ENDIF()

TARGET_INCLUDE_DIRECTORIES(
    PaperCutLight PUBLIC "${PROJECT_SOURCE_DIR}/include")

TARGET_LINK_LIBRARIES(PaperCutLight PUBLIC AGZUtils FileWatcher)
